<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottombar_gradient"

            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp">


            <ImageView
                android:id="@+id/bottom_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/profile_icon" />

            <ImageView
                android:id="@+id/bottom_food"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/food_icon" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:clickable="false"
                android:src="@drawable/recordweight_icon" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/reports_icon" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="576dp"
            android:background="@drawable/maingreyrectangle"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="348dp"
                    android:layout_height="349dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/foodcontainerstyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="316dp"
                        android:layout_height="29dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="food"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="protein"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="fat"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="carbs"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="kcal"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/scrollView3"
                        android:layout_width="324dp"
                        android:layout_height="263dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/recommended"
                        android:layout_width="253dp"
                        android:layout_height="28dp"
                        android:text="Recommended"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="16dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchfood_input"
                    android:layout_width="337dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="68dp"
                    android:background="@drawable/textinputstyle"
                    android:textColorHint="#FFFFFF"
                    app:boxStrokeColor="#FFFFFF"
                    app:endIconTint="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleTint="#FFFFFF"
                    app:startIconTint="#FFFFFF">

                    <AutoCompleteTextView
                        android:id="@+id/search_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:hint="Search food..."
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20px"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        tools:layout_editor_absoluteX="-4dp"
                        tools:layout_editor_absoluteY="126dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_emailinput"
                    android:layout_width="295dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textinputstyle"
                    android:textColorHint="#FFFFFF"
                    app:boxStrokeColor="#FFFFFF"
                    app:endIconTint="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.311"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchfood_input"
                    app:passwordToggleTint="#FFFFFF"
                    app:startIconTint="#FFFFFF">

                    <AutoCompleteTextView
                        android:id="@+id/quantity_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:hint="Quantity"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20px"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        tools:layout_editor_absoluteX="-4dp"
                        tools:layout_editor_absoluteY="126dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/fetch_food_button"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/orangebutton"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center"
                    android:text=">"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.14"
                    app:layout_constraintStart_toEndOf="@+id/login_emailinput"
                    app:layout_constraintTop_toBottomOf="@+id/searchfood_input" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/fooddiary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Food"
            android:textColor="#7E7E7E"
            android:textSize="50sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>